Fixing a bunch of styling issues (still to fix screen too big issues)

--- a/war/style.css
+++ b/war/style.css
@@ -4101,10 +4101,12 @@ body:before {
   min-height: 100%;
   position: relative;
 }
+/* Commented out by Manish
 #ng-view {
   min-height: 650px;
   overflow: auto;
 }
+*/
 .navbar-footer {
   background-color: #383c44;
   color: white;
@@ -4448,7 +4450,7 @@ body:before {
   /* background-image: -webkit-linear-gradient(75deg, #2c7ba3, #29bba1);
   background-image: linear-gradient(75deg, #2c7ba3, #29bba1); */
   width: 100%;
-  position: absolute;
+  /* Commented out by Manish: position: absolute; */
   top: 0;
   bottom: 0;
 }
@@ -4754,8 +4756,12 @@ body:before {
 }
 
 /* Manish: Adding to see if we can get the scroll bar */
-.overflow_auto {
+.fullscreen {
 	overflow: auto;
+	height: 100%;
+	width: 100%;
+	/* position: relative;
+	min-height: 100%; */
 }
 /* Manish: Adding for the spinner */
 .spinner-screen {
@@ -4800,9 +4806,42 @@ body:before {
 	  border-left: 1px #f00;
 	  border-right: 1px #f00;
     }
-
-.row div {
-	margin-left: 20px;
+/* Override */
+.row > div {
+	padding-left: 20px;
+}
+/* Override */
+.navbar {
+  height: auto;
+  bottom: 0px;
+}
+/* Override */
+.navbar-header {
+  margin-bottom: 0px;
+}
+/* Override */
+.navbar-footer {
+  margin-top: 0px;
+  /* height: 86px; /* footer height */
+  /* position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; */
+}
+#ng-view {
+	padding-bottom: 10px;
+	/* padding-bottom: 96px; /* footer height + 10px */
+}
+/* Override */
+.auth-wrapper .auth-wrapper-content {
+  margin-top: 0px;
+}
+/* Override */
+h1 {
+	margin-bottom: 5px;
+}
+.has-icon.icon-lg .form-control {
+  padding-left: 45px;
 }
 
 	.button--heroku {
